--- a/static/css/techan.css
+++ b/static/css/techan.css
@@ -1,11 +1,3 @@
-body {
-    font: 10px sans-serif;
-}
-
-text {
-    fill: #000;
-}
-
 path {
     fill: none;
     stroke-width: 1;
@@ -47,4 +39,12 @@ path.volume {
 
 .crosshair .axisannotation path {
     fill: #DDDDDD;
+}
+
+.scope-composed-annotation {
+    font-size: 60%;
+}
+
+text.coords {
+    font-size: 80%;
 }
