change background img

--- a/themes/tranquilpeak/layouts/taxonomy/category.html
+++ b/themes/tranquilpeak/layouts/taxonomy/category.html
@@ -12,7 +12,7 @@
                {{ with .Params.coverCaption }}hasCoverCaption{{ end }}">
           <h3 class="category-title">
               {{ .Title }}
-              {{ if eq .Title "Photography" }}
+              {{ if eq .Title "photography" }}
                 <a class="category-subtitle" href="/photo-faves">Favorites</a>
               {{end}}
           </h3>
