update to use awesome font 5

--- a/themes/tranquilpeak/layouts/taxonomy/category.terms.html
+++ b/themes/tranquilpeak/layouts/taxonomy/category.terms.html
@@ -83,6 +83,7 @@
                   <ul class="archive-posts">
                     {{ range ($.Scratch.GetSortedMapValues $path) }}
                       <li class="archive-post">
+                        <i class="fas fa-caret-right"></i>
                         <a class="archive-post-title" href="{{ .RelPermalink }}">{{ .Title }}</a><span class="archive-post-date"> - {{ partial "internal/date" . }}</span>
                       </li>
                     {{ end }}
@@ -104,6 +105,7 @@
                 <ul class="archive-posts">
                   {{ range .Pages.ByDate }}
                     <li class="archive-post">
+                      <i class="fas fa-caret-right"></i>
                       <a class="archive-post-title" href="{{ .Permalink }}">
                         {{ .Title }}
                       </a>
