--- a/themes/tranquilpeak/layouts/taxonomy/tag.terms.html
+++ b/themes/tranquilpeak/layouts/taxonomy/tag.terms.html
@@ -36,6 +36,7 @@
                   <ul class="archive-posts">
                     {{ range .Pages.ByDate }}
                       <li class="archive-post">
+                        <i class="fas fa-caret-right"></i>
                         <a class="archive-post-title" href="{{ .Permalink }}">
                           {{ .Title }}
                         </a>
