--- a/themes/tranquilpeak/layouts/partials/about.html
+++ b/themes/tranquilpeak/layouts/partials/about.html
@@ -1,7 +1,7 @@
 <div id="about">
   <div id="about-card">
     <div id="about-btn-close">
-      <i class="fa fa-remove"></i>
+      <i class="fas fa-times"></i>
     </div>
     {{ with ($.Scratch.Get "authorPicture") }}
       <img id="about-card-picture" src="{{ . }}{{ if in . "//www.gravatar.com/avatar/" }}?s=110{{ end }}" alt="{{ i18n "global.author_picture" }}" />
@@ -12,14 +12,14 @@
     {{ end }}
     {{ with .Site.Author.job }}
       <div id="about-card-job">
-        <i class="fa fa-briefcase"></i>
+        <i class="fas fa-briefcase"></i>
         <br/>
         {{ . | markdownify }}
       </div>
     {{ end }}
     {{ with .Site.Author.location }}
       <div id="about-card-location">
-        <i class="fa fa-map-marker"></i>
+        <i class="fas fa-map-marker"></i>
         <br/>
         {{ . }}
       </div>
