--- a/themes/tranquilpeak/layouts/partials/internal/recursive-categories-full-1.html
+++ b/themes/tranquilpeak/layouts/partials/internal/recursive-categories-full-1.html
@@ -7,6 +7,7 @@
   <ul class="archive-posts">
     {{ range (.scratch.GetSortedMapValues (replace .category.path " " "/")) }}
       <li class="archive-post" style="display: list-item;">
+        <i class="fas fa-caret-right"></i>
         <a class="archive-post-title" href="{{ .RelPermalink }}">{{ .Title }}</a><span class="archive-post-date"> - {{ partial "internal/date" . }}</span>
       </li>
     {{ end }}
