--- a/themes/tranquilpeak/layouts/partials/post/share-options.html
+++ b/themes/tranquilpeak/layouts/partials/post/share-options.html
@@ -1,5 +1,5 @@
 <div id="share-options-bar" class="share-options-bar" data-behavior="{{ .Scratch.Get "sidebarBehavior" }}">
-  <i id="btn-close-shareoptions" class="fa fa-close"></i>
+  <i id="btn-close-shareoptions" class="fas fa-times"></i>
   <ul class="share-options">
     {{ range .Site.Params.sharingOptions }}
       <li class="share-option">
