--- a/themes/tranquilpeak/layouts/partials/head.html
+++ b/themes/tranquilpeak/layouts/partials/head.html
@@ -29,8 +29,8 @@
     <title>{{ with .Title }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }}</title>
 
     <link rel="icon" href="{{ with .Site.Params.favicon }}{{ . }}{{ else }}/favicon.png{{ end }}">
-    {{ with .RSSLink }}
-      <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ . }}">
+    {{ if .OutputFormats.Get "RSS" }}
+    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .OutputFormats.Get "RSS" }}">
     {{ end }}
 
     {{ with .Site.Author.googleplus }}
