--- a/themes/tranquilpeak/layouts/partials/post/disqus.html
+++ b/themes/tranquilpeak/layouts/partials/post/disqus.html
@@ -1,3 +1,14 @@
+<div class="post bg-white">
+<script src="https://utteranc.es/client.js"
+  repo="Nianze/personal-site"
+  issue-term="pathname"
+  label="✨💬✨"
+  theme="github-light"
+  crossorigin="anonymous"
+  async>
+</script>
+</div>
+
 <div id="disqus_thread">
   <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
