--- a/themes/tranquilpeak/layouts/partials/post/disqus.html
+++ b/themes/tranquilpeak/layouts/partials/post/disqus.html
@@ -1,4 +1,4 @@
-<div class="post bg-white">
+<div class="comment utteranc_white">
 <script src="https://utteranc.es/client.js"
   repo="Nianze/personal-site"
   issue-term="pathname"
@@ -9,6 +9,6 @@
 </script>
 </div>
 
-<div id="disqus_thread">
+<!-- <div id="disqus_thread">
   <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div>
+</div> -->
