update utteranc config to use personal-site-comments repo

--- a/themes/tranquilpeak/layouts/partials/post/actions.html
+++ b/themes/tranquilpeak/layouts/partials/post/actions.html
@@ -63,7 +63,7 @@
       {{ end }}
       {{ if and (not (eq .Params.comments false)) .Site.DisqusShortname }}
         <li class="post-action">
-          <a class="post-action-btn btn btn--default" href="#disqus_thread">
+          <a class="post-action-btn btn btn--default" href="#utteranc_thread">
             <i class="fas fa-comments"></i>
           </a>
         </li>
