--- a/themes/tranquilpeak/layouts/partials/post/disqus.html
+++ b/themes/tranquilpeak/layouts/partials/post/disqus.html
@@ -1,12 +1,12 @@
-<div class="comment utteranc_white">
-<script src="https://utteranc.es/client.js"
-  repo="Nianze/personal-site"
-  issue-term="pathname"
-  label="✨💬✨"
-  theme="github-light"
-  crossorigin="anonymous"
-  async>
-</script>
+<div class="utteranc_thread">
+  <script src="https://utteranc.es/client.js"
+    repo="Nianze/personal-site-comments"
+    issue-term="pathname"
+    label="✨comment 💬"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+  </script>
 </div>
 
 <!-- <div id="disqus_thread">
