--- a/themes/tranquilpeak/layouts/partials/post/disqus.html
+++ b/themes/tranquilpeak/layouts/partials/post/disqus.html
@@ -1,4 +1,4 @@
-<div class="utteranc_thread">
+<div id="utteranc_thread">
   <script src="https://utteranc.es/client.js"
     repo="Nianze/personal-site-comments"
     issue-term="pathname"
