update about card

--- a/themes/tranquilpeak/layouts/partials/about.html
+++ b/themes/tranquilpeak/layouts/partials/about.html
@@ -12,14 +12,14 @@
     {{ end }}
     {{ with .Site.Author.job }}
       <div id="about-card-job">
-        <i class="fas fa-briefcase"></i>
+        <i class="fas fa-laptop-code"></i>
         <br/>
         {{ . | markdownify }}
       </div>
     {{ end }}
     {{ with .Site.Author.location }}
       <div id="about-card-location">
-        <i class="fas fa-map-marker"></i>
+        <i class="fas fa-map-marked-alt"></i>
         <br/>
         {{ . }}
       </div>
