--- a/themes/tranquilpeak/layouts/index.html
+++ b/themes/tranquilpeak/layouts/index.html
@@ -1,5 +1,10 @@
 {{ partial "head.html" . }}
-  <body>
+  <body id="container">
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
     <div id="blog">
       {{ partial "header.html" . }}
       {{ partial "sidebar.html" . }}
