--- a/themes/tranquilpeak/layouts/taxonomy/tag.html
+++ b/themes/tranquilpeak/layouts/taxonomy/tag.html
@@ -1,5 +1,6 @@
 {{ partial "head.html" . }}
-  <body>
+  <body id="container">
+    {{ partial "loader.html" . }}
     <div id="blog">
       {{ partial "header.html" . }}
       {{ partial "sidebar.html" . }}
