--- a/themes/tranquilpeak/layouts/index.html
+++ b/themes/tranquilpeak/layouts/index.html
@@ -1,10 +1,6 @@
 {{ partial "head.html" . }}
   <body id="container">
-    <div id="loader-wrapper">
-        <div id="loader"></div>
-        <div class="loader-section section-left"></div>
-        <div class="loader-section section-right"></div>
-    </div>
+    {{ partial "loader.html" . }}
     <div id="blog">
       {{ partial "header.html" . }}
       {{ partial "sidebar.html" . }}
