update post-actoin: toc and back2top

--- a/themes/tranquilpeak/layouts/partials/post/actions.html
+++ b/themes/tranquilpeak/layouts/partials/post/actions.html
@@ -63,20 +63,23 @@
       {{ end }}
       {{ if and (not (eq .Params.comments false)) .Site.DisqusShortname }}
         <li class="post-action">
-          <a class="post-action-btn btn btn--default" href="#utteranc_thread">
-            <i class="fas fa-comments"></i>
+          <a class="post-action-btn btn btn--default" href="#utteranc_thread" data-tooltip="Comments">
+            <i class="fas fa-comment-dots"></i>
           </a>
         </li>
       {{ end }}
-      <li class="post-action">
-        {{ if findRE "<!--\\s*[t|T][o|O][c|C]\\s*-->" .Content }}
-          <a class="post-action-btn btn btn--default" href="#table-of-contents">
-        {{ else }}
-          <a class="post-action-btn btn btn--default" href="#">
-        {{ end }}
-          <i class="fas fa-list"></i>
-        </a>
-      </li>
+      {{ if findRE "<!--\\s*[t|T][o|O][c|C]\\s*-->" .Content }}
+        <li class="post-action">
+          <a class="post-action-btn btn btn--default" href="#table-of-contents" data-tooltip="Table of Contents">
+            <i class="fas fa-list"></i>
+          </a>
+        </li>
+      {{ end }}
+        <li class="post-action">
+          <a class="post-action-btn btn btn--default" href="#" data-tooltip="Back to top">
+            <i class="fas fa-arrow-up"></i>
+          </a>
+        </li>
     </ul>
   {{ end }}
 </div>
