--- a/themes/tranquilpeak/layouts/partials/post/actions.html
+++ b/themes/tranquilpeak/layouts/partials/post/actions.html
@@ -68,18 +68,16 @@
           </a>
         </li>
       {{ end }}
-      {{ if findRE "<!--\\s*[t|T][o|O][c|C]\\s*-->" .Content }}
-        <li class="post-action">
+      <li class="post-action">
+        {{ if findRE "<!--\\s*[t|T][o|O][c|C]\\s*-->" .Content }}
           <a class="post-action-btn btn btn--default" href="#table-of-contents" data-tooltip="Table of Contents">
             <i class="fas fa-list"></i>
-          </a>
-        </li>
-      {{ end }}
-        <li class="post-action">
-          <a class="post-action-btn btn btn--default" href="#" data-tooltip="Back to top">
+        {{ else }}
+          <a class="post-action-btn btn btn--default" href="#">
             <i class="fas fa-arrow-up"></i>
+        {{ end }}
           </a>
-        </li>
+      </li>
     </ul>
   {{ end }}
 </div>
