--- a/themes/tranquilpeak/layouts/_default/single.html
+++ b/themes/tranquilpeak/layouts/_default/single.html
@@ -36,8 +36,8 @@
             {{ end }}
             {{ partial "post/actions.html" . }}
             {{ if not (eq .Params.comments false) }}
-              {{ if .Site.DisqusShortname }}
-                {{ partial "post/disqus.html" . }}
+              {{ if .Site.Params.utteranc.enable }}
+                {{ partial "post/comments.html" . }}
               {{ end }}
             {{ end }}
           </div>
