--- a/themes/tranquilpeak/layouts/partials/post/actions.html
+++ b/themes/tranquilpeak/layouts/partials/post/actions.html
@@ -61,7 +61,7 @@
           </li>
         {{ end }}
       {{ end }}
-      {{ if and (not (eq .Params.comments false)) .Site.DisqusShortname }}
+      {{ if and (not (eq .Params.comments false)) .Site.Params.utteranc.enable }}
         <li class="post-action">
           <a class="post-action-btn btn btn--default" href="#utteranc_thread" data-tooltip="Comments">
             <i class="fas fa-comment-dots"></i>
