fix utterances labeling

--- a/themes/tranquilpeak/layouts/partials/post/comments.html
+++ b/themes/tranquilpeak/layouts/partials/post/comments.html
@@ -3,7 +3,7 @@
     repo= "{{ .Site.Params.utteranc.repo }}"
     issue-term="{{ .Site.Params.utteranc.issueTerm }}"
     theme="{{ default "github-light" .Site.Params.utteranc.theme }}"
-    label="{{ default "github-light" .Site.Params.utteranc.label }}"
+    label="{{ default "" .Site.Params.utteranc.label }}"
     crossorigin="anonymous"
     async>
   </script>
