--- a/static/css/loader.css
+++ b/static/css/loader.css
@@ -1,3 +1,10 @@
+.texhtml {
+    -moz-font-feature-settings: "lnum","tnum","kern" 0;
+    -webkit-font-feature-settings: "lnum","tnum","kern" 0;
+    font-feature-settings: "lnum","tnum","kern" 0;
+    font-variant-numeric: lining-nums tabular-nums;
+    font-kerning: none;
+}
 
 #loader-wrapper {
     position: fixed;
